<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="6dip"
    android:paddingRight="6dip" >

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/router_ip" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/routerIpEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/routerIpAutofillImageButton"
            android:ems="10"
            android:hint="@string/router_ip"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/routerIpAutofillImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/routerIpEditText"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="Use Default Gateway"
            android:src="@drawable/wand" />

    </RelativeLayout>

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/router_user" />

    <EditText
        android:id="@+id/routerUserEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/router_user"
        android:singleLine="true" >
    </EditText>

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/router_password" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/routerPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/router_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/routerPasswordShowCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/routerPasswordEditText"
            android:layout_alignBottom="@+id/routerPasswordEditText"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|right" />
    </RelativeLayout>

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/router_type" />

    <ExpandableListView
        android:id="@+id/routerTypeExpandableListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true" >
    </ExpandableListView>

</LinearLayout>